2010-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Properly filter on statuses too.  Makes search !waitingfor
	  work again.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-things-due/map.js:
	* python/mushin/common/app.py:
	  Use new views.
	  add getStatutes and getThingsByProject.
	* python/mushin/maemo/new.py:
	  Fix up contexts and statutes.
	* python/mushin/maemo/things.py:
	  Allow removing completed things.
	* python/mushin/maemo/start.py:
	  Add contexts and projects lists.
	* python/mushin/maemo/lists.py:
	  Make this  a 3 by 4 table, scrollable.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-context/map.js:
	* couchdb/views/by-project/map.js:
	* couchdb/views/by-status/map.js:
	  make them all similar.
	* couchdb/views/statuses/reduce.js (added):
	* couchdb/views/statuses/map.js (added):
	  Add.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Properly return whether we rescheduled.

2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Make sure save returns the Deferred.
	  Make add log a failure when adding/saving.
	* python/mushin/maemo/start.py:
	  Show an error on save.

2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Add save method that proxies to add for now.
	* python/mushin/maemo/new.py:
	  Make NewWindow Loggable.
	  Use the finish method.
	  Rework date button resetting.
	  Add recurrence/duration.
	  Make complete finish the task, optionally rescheduling.
	* python/mushin/maemo/start.py:
	  Actually save the updated version now that everything seems to work.

2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Make a Thing loggable.
	  Add a finish method that implements rescheduling.